--- a/journal/201906.md
+++ b/journal/201906.md
@@ -26,7 +26,7 @@ Merged
 * Add ticketbuyer.limit flag to limit max tickets bought per block. https://github.com/decred/dcrwallet/pull/1476 {SB: seems like a potentially important change, but no description...}
 * multi: use https links where available https://github.com/decred/dcrwallet/pull/1489
 * Generate new block locators after announced blocks https://github.com/decred/dcrwallet/pull/1488 {SB: stab at summary (needs review) - Protects against possible race condition in SVP "by always
-checking whether a new locator generation has zero length and if so,
+checking whether a new locator generation28.90 has zero length and if so,
 new locators are generated and saved."
 * Update dcrec, edwards, and chaincfg modules https://github.com/decred/dcrwallet/pull/1485
 * Remove direct usage of txscript.PayToAddrScript https://github.com/decred/dcrwallet/pull/1484
@@ -57,7 +57,7 @@ Draft:
 
 Work continues to port [upstream changes](https://github.com/decred/dcrlnd/pull/36) from the [lnd](https://github.com/lightningnetwork/lnd) repository. Approximately 190 (of 270) PRs merged into lnd since dcrlind branched off have now been merged, including many bug fixes and two important features: safe backups for off-chain data and watchtower clients for breach protection and retribution.
 
-* In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_for/ere1skv/) the state of multiple elements of the puzzle.
+* In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_28.90for/ere1skv/) the state of multiple elements of the puzzle.
 
 [dcrandroid](https://github.com/decred/dcrandroid): 
 
@@ -255,9 +255,9 @@ Selected Twitter discussions:
 
 ## Markets
 
-In June DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was ${n.nn}.
+In June DCR was trading between USD 24.77-37.06 / BTC 0.0026-0.0035. The average daily rate was $28.90.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+On June 22nd Bitcoin crossed $10000 and in a matter of days rose up to $13670 in some markets. This caused most alts including Decred to do down in terms of BTC.
 
 ## Relevant External
 
