add notes from social media review

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -111,13 +111,17 @@ Welcome to new first time contributors with code merged to master: Marton [polit
 
 ## Governance
 
-In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,135 DCR and spent 6,657 DCR. Using June's daily average DCR/USD rate of $28.90, this is $437K received and $192K spent. As these payments were for work completed in May, it is also informative to consider them in the context of the May average daily rate of $27.71 - in which case the USD received/spent figures are $419K/$184K. As of July 1, Treasury balance is 622,472 DCR ($18.36 million USD at $29.50).
+In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,135 DCR and spent 6,657 DCR. Using June's daily average DCR/USD rate of $28.90, this is $437K received and $192K spent. As these payments were for work completed in May, it is also informative to consider them in the context of the May average daily rate of $27.71 - in which case the USD received/spent figures are $419K/$184K. As of Jul 1, Treasury balance is 622,472 DCR ($18.36 million USD at $29.50).
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
 * [Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Commenters in the proposal and [on Reddit](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) appreciated how the proposal has sections for both technical and non technical audiences, and also noted how Decred's on-chain voting systems allows for elegant updates without years of fruitless discussions.
 
 https://twitter.com/RichardRed0x/status/1139860218010058753
+
+Reddit polls about name change and [approval/quorum](approval/quorum) and [decrediton name change](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), [new word for describing wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and whether to [replace DAE with DAO](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/)  - and discussion about ticket polling on reddit pi.
+
+
 
 Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) to list DCR on Jun 13.
 
@@ -175,9 +179,29 @@ New merchants:
 
 Attended:
 
+* 12 Jun - [Decred Washington](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/?_xtd=gqFyqTE4NDQxMDkyMaFwo3dlYg) - Washington DC, USA
+
+* 26 Jun - [SF Decred Devs x Coinbase Custody Happy Hour](https://www.meetup.com/San-Francisco-Decred-Meetup/events/262420787/) - San Francisco, USA. https://twitter.com/CryptoLeslie/status/1144092778017648641
+
+* 20 Jun - [Beijing Decred Meetup](https://twitter.com/DecredCN/status/1138739545594220544) - Beijing, China.
+
+* 19-23 Jun - [Campus Party Brasilia](https://brasil.campus-party.org/) - Brasilia, Brazil. Decred was [well](https://twitter.com/Decred_BR/status/1141782527637688322) [represented](https://twitter.com/Decred_BR/status/1141767693344935941) for another year at Campus Party.
+
+* <https://brasil.campus-party.org/>
+
+* > There are three Decred offline events in China this month. One Decred exclusive show, two guest shows. They are in Beijing, Wuhan and Zhengzhou. DCR to the moon.（：
+
+* https://twitter.com/BlockBeatsChina/status/1142991400616652800
+
+* https://twitter.com/decredproject/status/1142769728160710658
+
+* 28 Jun - [Community Update on all things Decred](https://twitter.com/DecredAustralia/status/1142725855476477952) - Melbourne, Australia
+
 * {dates} - [{title}]({event link}) - {city}, {country}. {recap}
 
 Upcoming:
+
+4-5 Jul - [Blockchain Summit Latam](https://www.blockchainsummit.la/) - Mexico City, Mexico
 
 * {dates} - [{title}]({event link}) - {city}, {country}. {info}
 
@@ -197,6 +221,7 @@ Selected articles:
 * Decred Australia - Building a Community Brick by Brick by @zohand ([Medium](https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e))
 * Staking Isn’t Just a Way to Earn Crypto Money – And It Shouldn’t Be by @jy-p ([Coindesk](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be))
 * The Roadblocks to Cryptocurrency Adoption in Africa by @GeorgePro ([Medium](https://medium.com/@aappiahpro1/the-roadblocks-to-cryptocurrency-adoption-in-africa-3be2c656ec07))
+* The Lowdown on Decred (DCR) by EliteX Exchange ([Medium](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5)) - EliteX exchange interviewed @changhugo and wrote a short overview which they published at the same time as listing DCR.
 * Cryptocurrency: A Mistaken Identity by @nnnko56 ([write.as](https://write.as/nnnko56/cryptocurrency-a-mistaken-identity)) - this article considers cryptocurrencies as being more than that label implies, and argues for a broader understanding of these projects as having important social components, or "cryptosocieties".
 
 Translations:
@@ -206,17 +231,22 @@ Translations:
 
 Videos:
 
-* {}
+* <https://www.youtube.com/watch?v=NuBkLA8o8ds>
+* <https://www.youtube.com/watch?v=h-AfggMHVvE>
+* 
 
 Audio:
 
 * DiD 2 https://www.youtube.com/watch?v=W6yUVq97cd8 https://soundcloud.com/decredindepth/ep2-luke-powell-politeia-decred-contractor-model
+* DID 3 (even though it came out Jul 1)
 * <https://hackernoon.com/the-insights-of-building-decentralized-infrastructure-with-jake-yocom-piatt-of-decred-63d6ff5ce7e1>
-* 
+* Akin Sawyer on <https://www.jamesfeltonkeith.com/radioshow/episode/c184d5d5/inclusionism-guest-akin-sawyerr-on-african-blockchain-crypto-and-serial-entrepreneur-in-fintech> Decred talk starts 38 min in.
+* <https://player.fm/series/off-the-chain-2428336/jake-yocom-piatt-project-lead-for-decred-crypto-ego-management>
+* <<https://fiftyonepercent.podbean.com/e/decreds-jake-yocom-piatt-a-differentiated-cryptos-goal-of-overtaking-bitcoin/>
 
 ## Community Discussions
 
-Community stats as of July 1:
+Community stats as of Jul 1:
 
 * Politeia users: 189 (+14)
 * Twitter followers: 40,479 (+17)
@@ -260,9 +290,15 @@ https://twitter.com/LuxorTechTeam/status/1141816750104821770
 
 {governance, funding, chain forks, community forks, controversy}
 
+Tezos fork <https://medium.com/tezoscommons/a-cautionary-tale-ocamlpro-65d692af09f8>
+
+<https://medium.com/@arthurb/potential-design-for-a-simple-and-evolvable-on-chain-treasury-77cfe2176423>
+
 https://www.coindesk.com/hard-core-fund-collects-50-btc-in-china-to-support-bitcoin-developers
 
 https://www.grin-forum.org/t/proposal-grin-governance-iteration/5191 {"it's arguably one of the most significant proposals thus far" -- https://proofofwork.news/p/proof-of-work-71}
+
+>
 
 {DEX}
 
