--- a/journal/201906.md
+++ b/journal/201906.md
@@ -79,7 +79,8 @@ Open
 
 {SB: sent to raedah for review} Release of the iOS wallet nears, with [Release Candidate 2](https://github.com/raedahgroup/dcrios/compare/v1.0.0-rc1...v1.0.0-rc2) of the iOS Wallet is awaiting approval by the Apple App store. Bugs reported in Release Candidate 1 have been fixed and minor UI tweaks have been implemented. 
 
-* https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/
+* RC1 https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/
+* RC2 https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/
 
 [dcrdata](https://github.com/decred/dcrdata): {}
 
@@ -143,6 +144,8 @@ Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The pric
 
 {any interesting analysis or events in the network}
 
+{nice numbers from https://twitter.com/raedahgroup/status/1144655370234880000}
+
 ## Mining
 
 {new miners, relevant news about existing miners, interesting events or stats}
@@ -156,6 +159,8 @@ Vertbase exchange added both [recurring orders](https://twitter.com/vertbase/sta
 EliteX [listed](https://twitter.com/elitexcrypto/status/1143044131800977409) Decred and also wrote an [article](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5) to explain decred to their users.
 
 MXC Exchange [added](https://twitter.com/wanbihou/status/1143846271645437952) a DCR/USDT exchange pair.
+
+Bleutrade announced DCR to be delisted among a mass cleanup on Jul 1 https://bleutrade.com/announcements/ https://www.reddit.com/r/decred/comments/c86a75/bleutrade_will_delist_dcr_20190715_1500_utc/ (second cleanup this year)
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -219,10 +224,12 @@ Selected articles:
 * The Regulators Are Coming - Canary in the Decred hash mine: Part I by @Fiach_Dubh ([Medium](https://medium.com/coinmonks/the-regulators-are-coming-a1ba2f8c02be)) - see also [discussion](https://www.reddit.com/r/decred/comments/byffz1/the_regulators_are_coming_canary_in_the_decred/) on reddit. 
 * Why the Name Decred is Awesome by @Haon ([Medium](https://medium.com/decred/why-the-name-decred-is-awesome-9627ae9b4e2))
 * Decred Australia - Building a Community Brick by Brick by @zohand ([Medium](https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e))
-* Staking Isn’t Just a Way to Earn Crypto Money – And It Shouldn’t Be by @jy-p ([Coindesk](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be))
+* Staking Isn’t Just a Way to Earn Crypto Money – And It Shouldn’t Be by @jy-p ([Coindesk](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be), also [in Korean](https://www.coindeskkorea.com/staking/))
 * The Roadblocks to Cryptocurrency Adoption in Africa by @GeorgePro ([Medium](https://medium.com/@aappiahpro1/the-roadblocks-to-cryptocurrency-adoption-in-africa-3be2c656ec07))
 * The Lowdown on Decred (DCR) by EliteX Exchange ([Medium](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5)) - EliteX exchange interviewed @changhugo and wrote a short overview which they published at the same time as listing DCR.
 * Cryptocurrency: A Mistaken Identity by @nnnko56 ([write.as](https://write.as/nnnko56/cryptocurrency-a-mistaken-identity)) - this article considers cryptocurrencies as being more than that label implies, and argues for a broader understanding of these projects as having important social components, or "cryptosocieties".
+* https://medium.com/@rastogimanu461/how-to-stake-and-earn-income-with-decred-dcr-473c825310c0 {good guide? worth being in the list?}
+* {check for June articles at https://stakey.club/en/articles/}
 
 Translations:
 
@@ -272,7 +279,9 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-* {}
+* https://twitter.com/Ammarooni/status/1145213941146181632
+* stirring the pot https://twitter.com/CryptoBrekkie/status/1145713705415372800
+* The Decred Challenge https://twitter.com/_Checkmatey_/status/1145764832362319872
 
 ## Markets
 
@@ -310,7 +319,7 @@ https://www.grin-forum.org/t/proposal-grin-governance-iteration/5191 {"it's argu
 
 * https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/
 
-{largest coinjoin ever coindesk, 20 btc grant}
+largest coinjoin ever https://www.coindesk.com/bitcoin-users-perform-what-might-be-the-largest-coinjoin-ever , 20 BTC grant https://bitcointalk.org/index.php?topic=279249.msg51274844#msg51274844
 
 India is proposing a 10-year jail sentence for those who mine, hold, or transact with cryptocurrencies. Ironically, the same bill proposes to create government-controlled Digital Rupee.
 
@@ -335,6 +344,8 @@ https://www.reddit.com/r/CryptoCurrency/comments/bvuon5/what_did_you_expect/
 Facebook Libra:
 
 * https://www.theblockcrypto.com/2019/06/14/facebooks-cryptocurrency-partners-revealed-we-obtained-the-entire-list-of-inaugural-backers/
+
+CNBC... https://thenextweb.com/hardfork/2019/06/28/cnbc-shilled-cryptocurrency-exchange-bitsane-pulls-exit-scam-on-246k-users/
 
 A vulnerability in certain YubiKey products allowed an attacker to guess private keys https://www.yubico.com/support/security-advisories/ysa-2019-02/
 
