--- a/journal/201906.md
+++ b/journal/201906.md
@@ -312,17 +312,13 @@ Zcash continues to move towards a method of funding development long-term throug
 
 Monero Community Crowdfunding System is [funding](https://ccs.getmonero.org/proposals/RandomX-audit.html) 3 audits of the new PoW algorithm, following a [process](https://www.reddit.com/r/Monero/comments/bozr0z/randomx_auditor_selection/) in which 20 participants in the #monero-dev IRC channel voted to prioritize the audits. A CCS proposal was created which covers all 3 audits (costing $18k, $47k and $53k respectively), with audits being greenlit as enough funds became available to pay for the preferred audits.
 
-https://medium.com/@arthurb/potential-design-for-a-simple-and-evolvable-on-chain-treasury-77cfe2176423
-https://www.reddit.com/r/tezos/comments/by5xy8/proposal_for_amendment_brest_a/
-https://news.bitcoin.com/bitcoin-cash-development-fund-receives-massive-support/
-
-https://blog.makerdao.com/multi-collateral-dai-collateral-types/
-
 Aragon Black [published](https://blog.aragon.black/aragon-fundraising-the-return-of-the-commons/) an article about Aragon Fundraising, which will be coming to mainnet in a few months. This is a platform for conducting Decentralized Autonomous Initial Coin Offerings (DAICOs, a concept initially [described](https://ethresear.ch/t/explanation-of-daicos/465) by Vitalik Buterin). Individuals who invest in a DAICO will receive tokens which grant them voting rights and some degree of ownership of the DAO's assets (which may come to include tokenized rights to intellectual property).
+
+MakerDAO will be [voting](https://blog.makerdao.com/multi-collateral-dai-collateral-types/) to determine the order in which 7 pre-selected assets will be proposed for review and ratification as part of the multi-collateral DAI upgrade.
 
 Arthur Breitman, Tezos founder, published a [blog](https://medium.com/@arthurb/potential-design-for-a-simple-and-evolvable-on-chain-treasury-77cfe2176423) with a design for a "simple and evolvable on-chain treasury". As a starting point, he suggests that funds be collected in a 3-of-5 multisig contract where the signatures are controlled by reputable parties. From there, the treasury could evolve into a system with many participants where proposals are made on chain. Sounds familiar.
 
-There has been some friction between the developer groups working on Tezos software. The OCamlPro team introduced a proposal to fix a security issue and reward themselves from inflation funding - at a time when the other developer teams had agreed to wait and inject a proposal at a later time. OCamlPro's 'early' submission means that the bakers will likely vote it down and thus it will take longer before the "real" proposal is submitted. OCamlPro [appeared](https://www.reddit.com/r/tezos/comments/byqc9i/ocamlpro_what_is_the_real_motivation_behind/) to be feeling frozen out by the other teams, having submitted a bug report and failed to receive acknowledgment. Subsequently, Tezos commons published an [article](https://medium.com/tezoscommons/a-cautionary-tale-ocamlpro-65d692af09f8) which purportedly uncovers details of a plan by OCamlPro to fork the Tezos chain and capture part of the Tezos community and market capitalization - and speculates that the OCamlPro team are acting to destabilize the Tezos community ahead of this move.
+There has been some friction between the developer groups working on Tezos software. The OCamlPro team introduced a proposal to fix a security issue and reward themselves from inflation funding - at a time when the other developer teams had agreed to wait and inject a proposal at a later time. OCamlPro's 'early' [submission](https://www.reddit.com/r/tezos/comments/by5xy8/proposal_for_amendment_brest_a/) means that the bakers will likely vote it down and thus it will take longer before the "real" proposal is submitted. OCamlPro [appeared](https://www.reddit.com/r/tezos/comments/byqc9i/ocamlpro_what_is_the_real_motivation_behind/) to be feeling frozen out by the other teams, having submitted a bug report and failed to receive acknowledgment. Subsequently, Tezos commons published an [article](https://medium.com/tezoscommons/a-cautionary-tale-ocamlpro-65d692af09f8) which purportedly uncovers details of a plan by OCamlPro to fork the Tezos chain and capture part of the Tezos community and market capitalization - and speculates that the OCamlPro team are acting to destabilize the Tezos community ahead of this move.
 
 An anonymous user claiming to be a current or former employee of Chainalysis participated in an AMA on /r/Bitcoin, subsequently deleted but archived [here](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/) (thanks [@fiach_dubh](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/eryukx6)). The answers suggested that Bitcoin privacy techniques like coinjoin and wasabi wallet, and all of the coins with privacy features, were hated by Chainalysis, and did not see a bright future for blockchain forensic analysis.
 
@@ -338,6 +334,8 @@ Bancor is going to [block access](https://support.bancor.network/hc/en-us/articl
 
 The Indian government is [considering](https://www.theblockcrypto.com/tiny/indias-draft-bill-proposes-a-10-year-jail-sentence-for-using-cryptocurrencies/) a draft bill which would criminalize those who mine, hold, or transact with cryptocurrencies, with stiff penalties of up to 10 years in prison and fines amounting to 3 times the perpetrator's gains.
 
+The Bitsane exchange, made famous by CNBC in a broadcast tutorial on how to buy XRP, [appears](https://thenextweb.com/hardfork/2019/06/28/cnbc-shilled-cryptocurrency-exchange-bitsane-pulls-exit-scam-on-246k-users/) to have pulled an exit scam and disappeared, along with the cryptoassets of any unfortunate users who were storing their crypto on the exchange.
+
 A [vulnerability](https://www.yubico.com/support/security-advisories/ysa-2019-02/) in certain YubiKey products allowed an attacker to guess private keys.
 
 Ad blocking browser extensions like uBlock are about to get hit by new Google Chrome [restrictions](https://www.theregister.co.uk/2019/06/13/google_chrome_ad_blockers/). The move was controversial, partly because the stated intent to protect users from malicious extensions also restricts their ability to block unwanted and dangerous web content.
@@ -347,7 +345,6 @@ The rate of SIM swapping attacks is [increasing](https://www.tonysheng.com/sim-s
 Who would have thought that a 27-year old _text editor_ can still have an arbitrary code execution [vulnerability](https://www.theregister.co.uk/2019/06/12/vim_remote_command_execution_flaw/)? This is a reminder that correctness is hard and why it takes so much work to build and test robust software.
 
 
-CNBC... https://thenextweb.com/hardfork/2019/06/28/cnbc-shilled-cryptocurrency-exchange-bitsane-pulls-exit-scam-on-246k-users/
 
 
 https://twitter.com/LuxorTechTeam/status/1141816750104821770 {linked to article does not load for me}
