--- a/journal/201906.md
+++ b/journal/201906.md
@@ -114,17 +114,35 @@ Welcome to new first time contributors with code merged to master: Marton [polit
 
 In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,135 DCR and spent 6,657 DCR. Using June's daily average DCR/USD rate of $28.90, this is $437K received and $192K spent. As these payments were for work completed in May, it is also informative to consider them in the context of the May average daily rate of $27.71 - in which case the USD received/spent figures are $419K/$184K. As of Jul 1, Treasury balance is 622,472 DCR ($18.36 million USD at $29.50).
 
-{high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
+Below is the proposal status as of Jul 1.
+
+The following proposals were approved:
+
+* [Decred Bug Bounty Proposal: Phase 2](https://proposals.decred.org/proposals/073694ed82d34b2bfff51e35220e8052ad4060899b23bc25791a9383375cae70)
+
+* [Ditto Communications Proposal for Decred: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04)
+
+* [Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f)
+
+* [Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32)
 
 * [Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Commenters in the proposal and [on Reddit](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) appreciated how the proposal has sections for both technical and non technical audiences, and also noted how Decred's on-chain voting systems allows for elegant updates without years of fruitless discussions.
 
-https://twitter.com/RichardRed0x/status/1139860218010058753
+There were 2 new proposals published:
 
-Reddit polls about name change and [approval/quorum](approval/quorum) and [decrediton name change](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), [new word for describing wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and whether to [replace DAE with DAO](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/)  - and discussion about ticket polling on reddit pi.
+* [Supplemental Proposal For Decred Tutorials By Denni Lovejoy](https://proposals.decred.org/proposals/d8d7ff7ad138ed322422aaa4d2a3e1c61f296ae56a2c2316cc5ecd10cf8dd8bd). This proposal asks for the original budget of $750 for tutorial videos to be increased to $7,500. @Denni Lovejoy has asked for the proposal to be abandoned following comments opposing it. There is some ongoing discussion about how to handle these scenarios where work on a proposal goes significantly over budget.
+
+* [Decred  Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements , press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable, the proposal was then abandoned by its owner.
+
+This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia vote participation over time.
 
 
+Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) and went on to list DCR on Jun 13.
 
-Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) to list DCR on Jun 13.
+A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), considering whether it should be [called something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
+
+While some of these polls and the discussions around them have been interesting, there are problems with using reddit and polling sites to gauge the opinions of Decred stakeholders - these are open to people who are not stakeholders, and allow for the polls/posts to be arbitrarily deleted or modified by their creator. In discussion about this phenomenon there seems to be strong support for a Decred version of reddit, based on Politeia, which would allow for a limited number of ticket-voter polls to be created.
+
 
 ## Network
 
@@ -188,9 +206,9 @@ Ditto's June achievements:
 * Off the Chain podcast with Jake <
 * Got Decred [quoted]( https://www.cnbc.com/2019/06/18/facebooks-libra-will-give-billions-access-to-cryptocurrency.html ) in CNBC on Libra
 * Got Decred [quoted](https://mashable.com/article/facebook-libra-experts/) in Mashable on Libra. Side note: CNBC and Mashable are mainstream media reaching people who know little about crypto. By getting Decred in front of them, we’re significantly expanding its reach. 
-* Got Decred [quoted](https://www.forbes.com/sites/kenrapoza/2019/06/20/facebooks-libra-coin-is-both-vampire-project-and-regulatory-nightmare/#425f36a11067) on Libra in Forbes - [twice](https://www.forbes.com/sites/rachelwolfson/2019/06/19/facebooks-cryptocurrency-libra-validates-blockchain-but-industry-experts-voice-concerns/#15e18c7672f4)!  
+* Got Decred [quoted](https://www.forbes.com/sites/kenrapoza/2019/06/20/facebooks-libra-coin-is-both-vampire-project-and-regulatory-nightmare/#425f36a11067) on Libra in Forbes - [twice](https://www.forbes.com/sites/rachelwolfson/2019/06/19/facebooks-cryptocurrency-libra-validates-blockchain-but-industry-experts-voice-concerns/#15e18c7672f4)! 
 * Got Decred [quoted](https://cointelegraph.com/news/what-is-libra-breaking-down-facebooks-new-digital-currency) on Libra in Cointelegraph
-* Got Jake [quoted](https://www.coindesk.com/how-blockchain-voting-is-supposed-to-work-but-in-practice-rarely-does) in on governance in CoinDesk <> 
+* Got Jake [quoted](https://www.coindesk.com/how-blockchain-voting-is-supposed-to-work-but-in-practice-rarely-does) on governance in CoinDesk
 * Got Richard [quoted](https://cointelegraph.com/news/internet-authority-history-of-centralized-companies-being-hostile-toward-crypto) in a Cointelegraph article about CCN’s “shutdown” 
 * Attended SF Bitcoin meetup, where the organizers expressed interest in organizing a governance panel with Decred as a speaker. 
 * Created a social media [guide](https://github.com/xaur/decred-pr/blob/release/engagement-guide-delist.md) on how to react (or not) to geofencing or delisting. 
@@ -362,3 +380,4 @@ Credits (alphabetical order):
 * writing and editing: {}
 * reviews and feedback: {}
 * title image: {}
+~~
