community discussions done

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -141,6 +141,10 @@ Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_t
 
 A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), considering whether it should be [called something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
 
+The last one can be considered a "soft proposal" by @s_ben to stop using DAE (Decentralized Autonomous Entity) and start using DAO (Decentralized Autonomous Organization) when describing the organization of the Decred project. The rationale was to position Decred approach as relevant to the DAO concept and one of the projects to watch in that space. There was strong support for 
+
+@s_ben also asked this question in chats, and there appeared to be good support for the change (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)). @s_ben then went ahead and opened Pull Requests to change the term in the limited number of places where it was being used in docs and on decred.org.
+
 While some of these polls and the discussions around them have been interesting, there are problems with using reddit and polling sites to gauge the opinions of Decred stakeholders - these are open to people who are not stakeholders, and allow for the polls/posts to be arbitrarily deleted or modified by their creator. In discussion about this phenomenon there seems to be strong support for a Decred version of reddit, based on Politeia, which would allow for a limited number of ticket-voter polls to be created.
 
 
@@ -203,7 +207,7 @@ Ditto's June achievements:
 * Secured and staffed “[Off the Chain](https://podcasts.apple.com/us/podcast/jake-yocom-piatt-project-lead-for-decred-crypto-ego/id1434060078?i=1000441486954 )” podcast with Anthony Pompliano, Founder of Morgan Creek Digital, and Jake. 
 * Secured and staffed “[Chain Reaction](https://youtu.be/kO_11gehyls )” podcast with Tom Shaughnessy, Delphi Digital, and Jake. 
 * Submitted [Ditto Communications Proposal: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) to Politeia, participated in discussion and then saw the proposal approved by the Decred stakeholders! Thank you for your vote of confidence. It’s an absolute joy working on Decred, and we look forward to the next 6 months. 
-* Off the Chain podcast with Jake <
+* Off the Chain podcast with Jake
 * Got Decred [quoted]( https://www.cnbc.com/2019/06/18/facebooks-libra-will-give-billions-access-to-cryptocurrency.html ) in CNBC on Libra
 * Got Decred [quoted](https://mashable.com/article/facebook-libra-experts/) in Mashable on Libra. Side note: CNBC and Mashable are mainstream media reaching people who know little about crypto. By getting Decred in front of them, we’re significantly expanding its reach. 
 * Got Decred [quoted](https://www.forbes.com/sites/kenrapoza/2019/06/20/facebooks-libra-coin-is-both-vampire-project-and-regulatory-nightmare/#425f36a11067) on Libra in Forbes - [twice](https://www.forbes.com/sites/rachelwolfson/2019/06/19/facebooks-cryptocurrency-libra-validates-blockchain-but-industry-experts-voice-concerns/#15e18c7672f4)! 
@@ -294,19 +298,29 @@ Community stats as of Jul 1:
 
 Comm systems news:
 
-* Several Matrix rooms were upgraded following the first stable release of Matrix spec. The inconvenience is that users need to join new rooms.
-
-{selected discussed topics, as bullet list or one paragraph per topic}
+* Several Matrix rooms were upgraded following the first stable release of Matrix spec. Users have to join new rooms but the process is very straightforward and all history is preserved.
 
 Selected Reddit posts:
 
-* {mention polls from governance section?}
+* A [post](https://www.reddit.com/r/decred/comments/c60aho/governance_would_matrixlike_channel_discussions/) asking if Matrix-like channel discussions posted on Reddit would increase adoption & education. 
+* [POLL: optimal Politeia pass threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/) - 57% said current level is OK, 7% said less than 60%, 26% were in favor of increasing the approval threshold.
+* [POLL: Rename Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/) - has a score on reddit of 0, which should probably be interpreted as lack of support.
+* [Question: Is a hybrid finance & governance tool called a 'wallet' or something altogether different?](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/)
+* [POLL: Rename DAE to DAO?](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) - had a score of 15 and top comment says "I support changing it to DAO" with 8 points. See also this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px) with notes on support from chat discussion.
 
 Selected Twitter discussions:
 
-* https://twitter.com/Ammarooni/status/1145213941146181632
-* stirring the pot https://twitter.com/CryptoBrekkie/status/1145713705415372800
-* The Decred Challenge https://twitter.com/_Checkmatey_/status/1145764832362319872
+More wild not-quite-maximalists were spotted on twitter this month, people who would consider themselves Bitcoiners but who also have a fondness for Decred. Apparently there are more of these closeted Decred fans, who dare not speak out about the cred because it would raise the ire of people in their circle.
+
+* [@Ammarooni](https://twitter.com/Ammarooni/status/1145213941146181632) thread about how "Bitcoin is addressing structural shortcomings of fiat money that aren’t immediately visible to the naked eye, but will become prominent over time. Decred is addressing the shortcomings of Bitcoin that aren’t prevalent today, but may become manifested over time."
+* @Checkmate tweeted a [thread](https://twitter.com/_Checkmatey_/status/1142918632546156544) about Dered as a digital organism driven by a human hive-mind with skin in the game, then went on to [compare](https://twitter.com/_Checkmatey_/status/1145944145141411840) its stock-to-flow with Bitcoin's and finally issue a [challenge](https://twitter.com/_Checkmatey_/status/1145764832362319872) to all Bitcoiners: spend one month studying Decred and come out believing it is not a worthy number 2 to Bitcoin.
+* @CryptoBrekkie created an interesting poll which received 720 responses.
+
+> So I've noticed a trend among some maximalists lately expressing a desire for a real, sound money competitor to Bitcoin, a rival that could ultimately help Bitcoin level up.
+> I've also noticed many maximalists have a soft spot for [@decredproject](https://twitter.com/decredproject).
+> Could Decred be that competitor?
+
+36% said Yes, 52% said No. 
 
 ## Markets
 
