Added dev stats

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -77,7 +77,7 @@ Open
 
 [dcrios](https://github.com/raedahgroup/dcrios):
 
-{SB: sent to raedah for review} Release of the iOS wallet nears, with [Release Candidate 2](https://github.com/raedahgroup/dcrios/compare/v1.0.0-rc1...v1.0.0-rc2) of the iOS Wallet is awaiting approval by the Apple App store. Bugs reported in Release Candidate 1 have been fixed and minor UI tweaks have been implemented. 
+Release of the iOS wallet nears, with [Release Candidate 2](https://github.com/raedahgroup/dcrios/compare/v1.0.0-rc1...v1.0.0-rc2) of the iOS Wallet is awaiting approval by the Apple App store. Bugs reported in Release Candidate 1 have been fixed and minor UI tweaks have been implemented. 
 
 * RC1 https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/
 * RC2 https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/
@@ -103,7 +103,7 @@ Other:
 
 * {smaller items go here}
 
-Dev activity stats for June: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository. ([chart]({chart link is optional, drop if not ready}))
+Dev activity stats for June: 283 active PRs, 321 master commits, 62K added and 29K deleted lines spread across 15 repositories. Contributions came from 1-8 developers per repository. ([chart]({chart link is optional, drop if not ready}))
 
 ## People
 
