Add Trust Wallet update

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -179,6 +179,9 @@ MXC Exchange [added](https://twitter.com/wanbihou/status/1143846271645437952) a 
 
 Bleutrade announced DCR to be delisted among a mass cleanup on Jul 1 https://bleutrade.com/announcements/ https://www.reddit.com/r/decred/comments/c86a75/bleutrade_will_delist_dcr_20190715_1500_utc/ (second cleanup this year)
 
+{SB: makes sense to put this here, but I think it could also go in Governance section. Also, this text is just copied from the latest [pi digest](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0), so maybe we want to reword a little}
+Decred’s part of the Trust Wallet integration is nearing completion. Approved by voters in March, this [proposal](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) split work between the Trust Wallet team, which was tasked with the core wallet integration, and Decred, which was tasked with integrating with and hosting the Blockbook server Trust Wallet uses to host transaction data. Core wallet integration has been completed by Trust Wallet, and Decred’s Blockbook integration is [nearing completion](https://github.com/trezor/blockbook/pull/216)), with one final issue remaining regarding how to represent Decred’s unique PoS voting mechanism in Blockbook data.
+
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 ## Adoption
