--- a/journal/201906.md
+++ b/journal/201906.md
@@ -145,23 +145,25 @@ While some of these polls and the discussions around them have been interesting,
 
 ## Network
 
+{cross-check dcrdata.org, dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
+
 Hashrate: June's hashrate opened at ~504 Ph/s and closed ~540 Ph/s, bottoming at 369 Ph/s and peaking at 607 Ph/s throughout the month. Pool hashrate distribution as of Jul2: lab.antpool.com 18%, UUPool 17.7%, F2Pool 14%, Poolin 9.5%, BTC.com 9%, Luxor 2.2%, CoinMine 0.21%, BeePool 0.15%, suprnova 0.03% and others 29% per per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=1559381330622&to=1561886930623}
+{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now}
 
-Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The price varied between 116.78-127.29 DCR. Locked amount was 4.75-4.83 million DCR, which corresponded to [49-48%](https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=1559327400000&to=1561919400000) of the available supply.
+Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The price varied between 116.78-127.29 DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to 49-48.5% of the available supply.
 
-Looking at node stats from [dcr.farm](ttps://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1559381330622&to=1561886930623). It shows an average of 426 nodes in the network,it also indicates that a large percentage of the network is on version 1.4.0.
+{recap of ticket price action if it was interesting}
 
-Throughout May it shows a large variation in the count of v1.4.0 nodes (103-237), but it has a nice chart of node version history that gives a general idea that the network is mostly on v1.4.0+ now.
+{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now} {exact dates https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1559381330622&to=1561886930623 }
 
+{Get status from chappjc}
 
-On June 27th decred supply crossed 10,000,000. [Raedahgroup](https://twitter.com/raedahgroup/status/1144655370234880000) made a tweet about it.
+{any interesting analysis or events in the network}
 
-We got a few support requests from ticketholders saying that their tickets have been missed by certain VSPs. On investigation, we found that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed on these votes. Grassfed has responded to us and has promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the list of approved VSPs.
+{nice numbers from https://twitter.com/raedahgroup/status/1144655370234880000}
 
-There has also been [dev](https://github.com/decred/dcrstakepool/issues/413) [talk](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$156207152510654HMiFp:decred.org?via=decred.org&via=matrix.org&via=zettaport.com) on how we could avoid these issues in the future. We also has some discussions on plans to get people to setup their own [voting wallets](https://matrix.to/#/!dhHYPTtCtvPSUfTepT:decred.org/$156207972910815kERGq:decred.org?via=decred.org&via=matrix.org&via=zettaport.com).
-
+{D1 and grassfed VSPs situation}
 
 ## Mining
 
@@ -287,7 +289,7 @@ Community stats as of Jul 1:
 * Reddit subscribers: 9,505 (+46)
 * Matrix users: 364 (+27)
 * Slack users: 6,769 (+48)
-* Discord users: {}, verified to post: {}
+* Discord users: 2310 (+53) verified to post: 246 (+20)
 * Telegram users: 3,407 (-169)
 * YouTube subscribers: 3,787 (+18)
 * Facebook followers: 3,230 (+11), likes: 2,964 (+10)
