--- a/journal/201906.md
+++ b/journal/201906.md
@@ -243,10 +243,6 @@ Upcoming:
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Selected articles:
 
 * The Blockchain Governance Quadrant by @Haon ([Medium](https://medium.com/@NoahPierau/the-blockchain-governance-quadrant-2a878a9cacb9))
@@ -267,18 +263,19 @@ Translations:
 
 Videos:
 
-* <https://www.youtube.com/watch?v=NuBkLA8o8ds>
-* <https://www.youtube.com/watch?v=h-AfggMHVvE>
-* 
+* [Decred Assembly: Deep Dive: DEX](https://www.youtube.com/watch?v=NuBkLA8o8ds)
+* [Decred at Consensus 2019](https://www.youtube.com/watch?v=h-AfggMHVvE) - @jy-p gives an update on the Decred roadmap.
+
 
 Audio:
 
-* DiD 2 https://www.youtube.com/watch?v=W6yUVq97cd8 https://soundcloud.com/decredindepth/ep2-luke-powell-politeia-decred-contractor-model
-* DID 3 (even though it came out Jul 1)
-* <https://hackernoon.com/the-insights-of-building-decentralized-infrastructure-with-jake-yocom-piatt-of-decred-63d6ff5ce7e1>
-* Akin Sawyer on <https://www.jamesfeltonkeith.com/radioshow/episode/c184d5d5/inclusionism-guest-akin-sawyerr-on-african-blockchain-crypto-and-serial-entrepreneur-in-fintech> Decred talk starts 38 min in.
-* <https://player.fm/series/off-the-chain-2428336/jake-yocom-piatt-project-lead-for-decred-crypto-ego-management>
-* <<https://fiftyonepercent.podbean.com/e/decreds-jake-yocom-piatt-a-differentiated-cryptos-goal-of-overtaking-bitcoin/>
+* [Decred in Depth - Ep.2 Luke Powell - Politeia + DCR Time](https://www.youtube.com/watch?v=W6yUVq97cd8)
+* [Decred Distributed: Africa with Akin Sawyerr](https://www.youtube.com/watch?v=0aZfkqdLOcI)
+* [Decred in Depth - Ep.3 Joel Monegro - Placeholder Capital DCR Investment Thesis + Governance](https://soundcloud.com/decredindepth/joel-monegro-placeholder-capital-dcr-investment-thesis)
+* [Hacekernoon Podcast E55 - The Insights of Building Decentralized Infrastructure with Jake Yocom-Piatt from Decred](https://www.youtube.com/watch?v=9i1d9C7DT9Y) - with [transcript](https://hackernoon.com/the-insights-of-building-decentralized-infrastructure-with-jake-yocom-piatt-of-decred-63d6ff5ce7e1).
+* @jy-p on [Off the Chain](https://player.fm/series/off-the-chain-2428336/jake-yocom-piatt-project-lead-for-decred-crypto-ego-management) with Anthony Pompliano
+* @jy-p on [51% podcast](https://fiftyonepercent.podbean.com/e/decreds-jake-yocom-piatt-a-differentiated-cryptos-goal-of-overtaking-bitcoin) with Tom Shaughnessy
+* [Inclusionism: Guest Akin Sawyerr on African Blockchain](https://www.jamesfeltonkeith.com/radioshow/episode/c184d5d5/inclusionism-guest-akin-sawyerr-on-african-blockchain-crypto-and-serial-entrepreneur-in-fintech). Decred talk starts 38 min in.
 
 ## Community Discussions
 
